Implementado edição e exclusão no módulo Contato

--- a/public/contatos/contato.list.html
+++ b/public/contatos/contato.list.html
@@ -53,11 +53,11 @@
                                 <header>
                                         <h1 class="title text-light fw-bold">Contatos</h1>
                                         <p class="fs-5 mt-3 text-warning fw-semibold">Cadastre seus contatos</p>
-                                        <a href="contatos.create.html" class="btn btn-lg btn-primary px-5">Novo Contatos</a>
+                                        <a href="contato.create.html" class="btn btn-lg btn-primary px-5">Novo Contatos</a>
                                 </header>
                         </section>
 
-                        <section id="tabela">
+                        <section id="listagem">
                                 <div class="card text-bg-dark border-secondary mt-4 p-2">
                                         <div class="card-body">
                                                 <table id="tabela" class="table table-dark table-hover text-center">
