--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>Início - eAgenda Web</title>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-2 shadow-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg">
                 <div class="container">
                   <a class="navbar-brand" href="index.html">
                         eAgenda
